--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server -p3001 --watch db.json"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.3",
